--- a/functions/supplier/mqtt-supplier/README.adoc
+++ b/functions/supplier/mqtt-supplier/README.adoc
@@ -22,12 +22,12 @@ Once injected, you can use the `get` method of the `Supplier` to invoke it and t
 
 All configuration properties are prefixed with `mqtt.supplier` and `mqtt`.
 
-For more information on the various options available, please see https://github.com/spring-cloud/stream-applications/blob/master/functions/supplier/mqtt-supplier/src/main/java/org/springframework/cloud/fn/supplier/mqtt/MqttSupplierProperties.java[MqttSupplierProperties].
+For more information on the various options available, please see link:src/main/java/org/springframework/cloud/fn/supplier/mqtt/MqttSupplierProperties.java[MqttSupplierProperties].
 
 ## Tests
 
-See this https://github.com/spring-cloud/stream-applications/blob/master/functions/supplier/mqtt-supplier/src/test/java/org/springframework/cloud/fn/supplier/mqtt/MqttSupplierTests.java[test suite] for the various ways, this supplier is used.
-In addition to this, there is also https://github.com/spring-cloud/stream-applications/blob/master/functions/common/mqtt-common/src/main/java/org/springframework/cloud/fn/common/mqtt/MqttProperties.java[this set of properties] to consider.
+See this link:src/test/java/org/springframework/cloud/fn/supplier/mqtt/MqttSupplierTests.java[test suite] for the various ways, this supplier is used.
+In addition to this, there is also link:../../common/mqtt-common/src/main/java/org/springframework/cloud/fn/common/mqtt/MqttProperties.java[this set of properties] to consider.
 
 ## Other usage
 
