--- a/README.adoc
+++ b/README.adoc
@@ -21,41 +21,41 @@ The following are the four major components of this repository.
 |===
 |Supplier |Consumer |Function
 
-|File
-|Cassandra
+|link:functions/supplier/file-supplier/README.adoc[File]
+|link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
 |Filter
-|HTTP
-|Counter
+|link:functions/supplier/http-supplier/README.adoc[HTTP]
+|link:functions/consumer/counter-consumer/README.adoc[Counter]
 |Header-Enricher
-|JDBC
-|File
+|link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
+|link:functions/consumer/file-consumer/README.adoc[File]
+|link:functions/function/http-request-function/README.adoc[HTTP Request]
+|link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
+|link:functions/consumer/ftp-consumer/README.adoc[FTP]
 |SpEL
-|MongoDB
-|FTP
+|link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
+|link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
 |Splitter
-|MQTT
-|JDBC
+|link:functions/supplier/tcp-supplier/README.adoc[TCP]
+|link:functions/consumer/log-consumer/README.adoc[Log]
 |
-|TCP
-|Log
-|
-|Time
-|MongoDB
+|link:functions/supplier/time-supplier/README.adoc[Time]
+|link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
 |
 |
-|MQTT
+|link:functions/consumer/mqtt-consumer/README.adoc[MQTT]
 |
 |
-|Rabbit
+|link:functions/consumer/rabbit-consumer/README.adoc[Rabbit]
 |
 |
-|Redis
+|link:functions/consumer/redis-consumer/README.adoc[Redis]
 |
 |
-|SFTP
+|link:functions/consumer/sftp-consumer/README.adoc[SFTP]
 |
 |
-|TCP
+|link:functions/consumer/tcp-consumer/README.adoc[TCP]
 |
 |===
 
@@ -64,47 +64,47 @@ The following are the four major components of this repository.
 |===
 |Source |Sink |Processor
 
-|File
-|Cassandra
-|Bridge
-|HTTP
-|Counter
-|Filter
-|JDBC
-|File
-|Groovy
-|Load-Generator
-|FTP
-|Header-Enricher
-|MongoDB
-|JDBC
-|Script
-|MQTT
-|Log
-|Splitter
-|TCP
-|MongoDB
-|Transform
-|Time
-|MQTT
+|link:applications/source/file-source/README.adoc[File]
+|link:applications/sink/cassandra-sink/README.adoc[Cassandra]
+|link:applications/processor/bridge-processor/README.adoc[Bridge]
+|link:applications/source/http-source/README.adoc[HTTP]
+|link:applications/sink/counter-sink/README.adoc[Counter]
+|link:applications/processor/filter-processor/README.adoc[Filter]
+|link:applications/source/jdbc-source/README.adoc[JDBC]
+|link:applications/sink/file-sink/README.adoc[Fiile]
+|link:applications/processor/groovy-processor/README.adoc[Groovy]
+|link:applications/source/load-generator-source/README.adoc[Load-Generator]
+|link:applications/sink/ftp-sink/README.adoc[FTP]
+|link:applications/processor/header-enricher-processor/README.adoc[Header-Enricher]
+|link:applications/source/mongodb-source/README.adoc[MongoDB]
+|link:applications/sink/jdbc-sink/README.adoc[JDBC]
+|link:applications/processor/http-request-processor/README.adoc[HTTP Request]
+|link:applications/source/mqtt-source/README.adoc[MQTT]
+|link:applications/sink/log-sink/README.adoc[Log]
+|link:applications/processor/script-processor/README.adoc[Script]
+|link:applications/source/tcp-source/README.adoc[TCP]
+|link:applications/sink/mongodb-sink/README.adoc[MongoDB]
+|link:applications/processor/splitter-processor/README.adoc[Splitter]
+|link:applications/source/time-source/README.adoc[Time]
+|link:applications/sink/mqtt-sink/README.adoc[MQTT]
+|link:applications/processor/transform-processor/README.adoc[Transform]
+|
+|link:applications/sink/rabbit-sink/README.adoc[Rabbit]
 |
 |
-|Rabbit
+|link:applications/sink/redis-sink/README.adoc[Redis]
 |
 |
-|Redis
+|link:applications/sink/router-sink/README.adoc[Router]
 |
 |
-|Router
+|link:applications/sink/sftp-sink/README.adoc[SFTP]
 |
 |
-|SFTP
+|link:applications/sink/tcp-sink/README.adoc[TCP]
 |
 |
-|TCP
-|
-|
-|Throughput
+|link:applications/sink/throughput-sink/README.adoc[Throughput]
 |
 |===
 
