--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sinks.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/sinks.adoc
@@ -5,21 +5,47 @@
 
 [[spring-cloud-stream-modules-cassandra-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/cassandra-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-counter-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/counter-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-file-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/file-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-ftp-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/ftp-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-geode-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/geode-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-jdbc-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/jdbc-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-log-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/log-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-mongodb-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/mongodb-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-mqtt-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/mqtt-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-rabbit-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/rabbit-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-redis-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/redis-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-router-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/router-sink/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-sftp-sink]]
 include::{stream-apps-root}/{branch}/applications/sink/sftp-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-tcp-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/tcp-sink/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-throughput-sink]]
+include::{stream-apps-root}/{branch}/applications/sink/throughput-sink/README.adoc[tags=ref-doc]
 
 :leveloffset: -2
