README changes. Properties cleanup.

--- a/README.adoc
+++ b/README.adoc
@@ -23,10 +23,10 @@ The following are the four major components of this repository.
 
 |link:functions/supplier/file-supplier/README.adoc[File]
 |link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
-|Filter
+|link:functions/function/filter-function/README.adoc[Filter]
 |link:functions/supplier/http-supplier/README.adoc[HTTP]
 |link:functions/consumer/counter-consumer/README.adoc[Counter]
-|Header-Enricher
+|link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
 |link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
 |link:functions/consumer/file-consumer/README.adoc[File]
 |link:functions/function/http-request-function/README.adoc[HTTP Request]
@@ -35,10 +35,10 @@ The following are the four major components of this repository.
 |
 |link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
 |link:functions/consumer/ftp-consumer/README.adoc[FTP]
-|SpEL
+|link:functions/function/spel-function/README.adoc[SpEL]
 |link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
-|Splitter
+|link:functions/function/splitter-function/README.adoc[Splitter]
 |link:functions/supplier/tcp-supplier/README.adoc[TCP]
 |link:functions/consumer/log-consumer/README.adoc[Log]
 |
@@ -70,32 +70,31 @@ The following are the four major components of this repository.
 |link:applications/source/file-source/README.adoc[File]
 |link:applications/sink/cassandra-sink/README.adoc[Cassandra]
 |link:applications/processor/bridge-processor/README.adoc[Bridge]
-|link:applications/source/http-source/README.adoc[HTTP]
+|link:applications/source/geode-source/README.adoc[Geode]
 |link:applications/sink/counter-sink/README.adoc[Counter]
 |link:applications/processor/filter-processor/README.adoc[Filter]
-|link:applications/source/jdbc-source/README.adoc[JDBC]
+|link:applications/source/http-source/README.adoc[HTTP]
 |link:applications/sink/file-sink/README.adoc[Fiile]
-|
-|link:applications/source/geode-source/README.adoc[Geode]
-|link:applications/sink/geode-sink/README.adoc[Geode]
-|
 |link:applications/processor/groovy-processor/README.adoc[Groovy]
-|link:applications/source/load-generator-source/README.adoc[Load-Generator]
+|link:applications/source/jdbc-source/README.adoc[JDBC]
 |link:applications/sink/ftp-sink/README.adoc[FTP]
 |link:applications/processor/header-enricher-processor/README.adoc[Header-Enricher]
+|link:applications/source/load-generator-source/README.adoc[Load-Generator]
+|link:applications/sink/geode-sink/README.adoc[Geode]
+|link:applications/processor/http-request-processor/README.adoc[HTTP Request]
 |link:applications/source/mongodb-source/README.adoc[MongoDB]
 |link:applications/sink/jdbc-sink/README.adoc[JDBC]
-|link:applications/processor/http-request-processor/README.adoc[HTTP Request]
+|link:applications/processor/script-processor/README.adoc[Script]
 |link:applications/source/mqtt-source/README.adoc[MQTT]
 |link:applications/sink/log-sink/README.adoc[Log]
-|link:applications/processor/script-processor/README.adoc[Script]
-|link:applications/source/tcp-source/README.adoc[TCP]
-|link:applications/sink/mongodb-sink/README.adoc[MongoDB]
 |link:applications/processor/splitter-processor/README.adoc[Splitter]
-|link:applications/source/time-source/README.adoc[Time]
-|link:applications/sink/mqtt-sink/README.adoc[MQTT]
+|link:applications/source/rabbit-source/README.adoc[Rabbit]
+|link:applications/sink/mongodb-sink/README.adoc[MongoDB]
 |link:applications/processor/transform-processor/README.adoc[Transform]
+|link:applications/source/tcp-source/README.adoc[TCP]
+|link:applications/sink/mqtt-sink/README.adoc[MQTT]
 |
+|link:applications/source/time-source/README.adoc[Time]
 |link:applications/sink/rabbit-sink/README.adoc[Rabbit]
 |
 |
@@ -112,6 +111,7 @@ The following are the four major components of this repository.
 |
 |
 |link:applications/sink/throughput-sink/README.adoc[Throughput]
+|
 |
 |===
 
