Tensorflow functions and applications
 * initial step
 * Tensorflow models functional model redesign

      -- Based on https://tzolov.github.io/mind-model-services
      -- Resolves #5

 * Add object detection processor README
 * Add image recognition processor README
 * Initial Tensorflow commonn README
 * Initial Tensorflow commonn README
 * Tensorflow common diagram
 * Tensorflow docs code
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Tensorflow docs code snippets improve
 * Add semantic segmentation function. add object detecteion function readme
 * oo images
 * Furether oo readme improvments
 * Final obj detection readme fixes
 * Add image recognition readme
 * Add image recognition readme 2
 * Semantic segmentation readme
 * Segmentation readme
 * Semantic segmentation readme 3
 * Fix image recognition and object detcion app starter dependecies

 * Add metadata for Tensorflow apps

--- a/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
+++ b/applications/stream-applications-build/stream-applications-docs/src/main/asciidoc/processors.adoc
@@ -18,6 +18,12 @@ include::{stream-apps-root}/{branch}/applications/processor/header-enricher-proc
 [[spring-cloud-stream-modules-http-request-processor]]
 include::{stream-apps-root}/{branch}/applications/processor/http-request-processor/README.adoc[tags=ref-doc]
 
+[[spring-cloud-stream-modules-image-recognition-processor]]
+include::{stream-apps-root}/{branch}/applications/processor/image-recognition-processor/README.adoc[tags=ref-doc]
+
+[[spring-cloud-stream-modules-object-detection-processor]]
+include::{stream-apps-root}/{branch}/applications/processor/object-detection-processor/README.adoc[tags=ref-doc]
+
 [[spring-cloud-stream-modules-script-processor]]
 include::{stream-apps-root}/{branch}/applications/processor/script-processor/README.adoc[tags=ref-doc]
 
