--- a/applications/sink/websocket-sink/README.adoc
+++ b/applications/sink/websocket-sink/README.adoc
@@ -70,12 +70,7 @@ There is an `Endpoint` that you can use to access the last `n` messages sent and
 ```
 
 There is also a simple HTML page where you see forwarded messages in a text area. You can access
-it directly via  `https://host:port` in your browser
-
-
-NOTE: For SSL mode (`--ssl=true`) a self signed certificate is used that might cause troubles with some
-Websocket clients. In a future release, there will be a `--certificate=mycert.cer` switch to pass a valid (not
-self-signed) certificate.
+it directly via  `https://host:port` in your browser.
 
 //end::ref-doc[]
 
