--- a/applications/source/twitter-stream-source/README.adoc
+++ b/applications/source/twitter-stream-source/README.adoc
@@ -4,9 +4,9 @@
 Real-time Tweet streaming https://developer.twitter.com/en/docs/tweets/filter-realtime/api-reference/post-statuses-filter.html[Filter] and https://developer.twitter.com/en/docs/tweets/sample-realtime/overview/GET_statuse_sample[Sample] APIs support.
 
 * The `Filter API` returns public statuses that match one or more filter predicates.
-Multiple parameters may be specified which allows most clients to use a single connection to the Streaming API.
-The `track`, `follow`, and `locations` fields should be considered to be combined with an OR operator.
-Queries with `track=foo` and `follow=1234` will returns Tweets matching `foo` OR created by user `1234`.
+Multiple parameters allows using a single connection to the Streaming API.
+TIP: The `track`, `follow`, and `locations` fields are combined with an *OR* operator!
+Queries with `track=foo` and `follow=1234` returns Tweets matching `foo` *OR* created by user `1234`.
 
 * The `Sample API` returns a small random sample of all public statuses.
 The Tweets returned by the default access level are the same, so if two different clients connect to this endpoint, they will see the same Tweets.
@@ -28,7 +28,7 @@ $$twitter.stream.filter.follow$$:: $$Specifies the users, by ID, to receive publ
 $$twitter.stream.filter.language$$:: $$Specifies the tweets language of the stream.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$twitter.stream.filter.locations$$:: $$Locations to track. Internally represented as 2D array. Bounding box is invalid: 52.38, 4.90, 51.51, -0.12.  The first pair must be the SW corner of the box$$ *($$List<BoundingBox>$$, default: `$$<none>$$`)*
 $$twitter.stream.filter.track$$:: $$Specifies keywords to track.$$ *($$List<String>$$, default: `$$<none>$$`)*
-$$twitter.stream.type$$:: $$<documentation missing>$$ *($$StreamType$$, default: `$$<none>$$`, possible values: `sample`,`filter`,`firehose`,`linkn`)*
+$$twitter.stream.type$$:: $$<documentation missing>$$ *($$StreamType$$, default: `$$<none>$$`, possible values: `sample`,`filter`,`firehose`,`link`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
